--- a/index.html
+++ b/index.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yuri Stream 210516 Lusion</title>
-  <style>
-    * { margin: 0; padding: 0; }
-    body { overscroll-behavior: none; }
-    #container { width: 100vw; height: 100vh; }
-    canvas { display: block; }
-    /* .cursor {
-      position: absolute;
-      top: -10px;
-      left: -10px;
-      width: 20px;
-      height: 20px;
-      background: #00f;
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 1000;
-    } */
-  </style>
-</head>
-<body>
-  <!-- <div class="cursor"></div> -->
-  <div id="container"></div>
-  <script src="/js/index.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Yuri Stream 210516 Lusion</title><style>*{margin:0;padding:0}body{overscroll-behavior:none}#container{width:100vw;height:100vh}canvas{display:block}</style></head><body>  <div id="container"></div> <script src="/js.3ce4c1f5.js"></script> </body></html>
